Support Linux and MacOS

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>cdripper</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <name>cdripper</name>
 
     <properties>
@@ -22,19 +35,4 @@
             <url>file:${project.basedir}/repo</url>
         </repository>
     </repositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.8.0-beta4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.8.0-beta4</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 </project>
