Handle unrecognised CDs and code tidy up
Allow reading track listing from a text file for unrecognised CDs.
Migrate to Java 8.
Code tidy up.

--- a/src/main/resources/encoders.properties
+++ b/src/main/resources/encoders.properties
@@ -1,5 +1,5 @@
 
 # Apple Lossless
 encoder.class.alac=org.boncey.cdripper.encoder.AppleLosslessEncoder
-encoder.location.alac=/mnt/music/encoded
+encoder.location.alac=/Users/pedro/Music/encoded
 
